adding experimental branch on destroy infra

--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -11,6 +11,7 @@ name: "Destroy Infrastructure"
   push:
     branches:
       - staging
+      - experimental
     paths:
       - "devops/terraform/**"
 
