--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -83,67 +83,65 @@ jobs:
             aws ec2 describe-vpc-peering-connections --filters "Name=requester-vpc-info.vpc-id,Values=$VPC_ID"
             aws ec2 describe-vpc-endpoints --filters "Name=vpc-id,Values=$VPC_ID"
 
-            # Delete any VPC Endpoints
-            echo "🔍 Finding VPC Endpoints..."
-            ENDPOINTS=$(aws ec2 describe-vpc-endpoints --filters "Name=vpc-id,Values=$VPC_ID" --query 'VpcEndpoints[*].VpcEndpointId' --output text)
-            for endpoint in $ENDPOINTS; do
-              echo "🗑️ Deleting VPC Endpoint: $endpoint"
-              aws ec2 delete-vpc-endpoints --vpc-endpoint-ids $endpoint
-            done
-
-            # Delete all ENIs
+            # Force detach and delete ENIs
             echo "🔍 Finding Network Interfaces..."
             ENI_IDS=$(aws ec2 describe-network-interfaces --filters "Name=vpc-id,Values=$VPC_ID" --query 'NetworkInterfaces[*].NetworkInterfaceId' --output text)
             for eni in $ENI_IDS; do
-              echo "🗑️ Deleting Network Interface: $eni"
-              aws ec2 delete-network-interface --network-interface-id $eni || {
-                echo "⚠️ Cannot delete ENI directly, detaching first..."
-                ATTACHMENT_ID=$(aws ec2 describe-network-interfaces --network-interface-ids $eni --query 'NetworkInterfaces[0].Attachment.AttachmentId' --output text)
-                if [ "$ATTACHMENT_ID" != "None" ]; then
-                  aws ec2 detach-network-interface --attachment-id $ATTACHMENT_ID --force
-                  sleep 10
-                  aws ec2 delete-network-interface --network-interface-id $eni
-                fi
-              }
+              echo "Processing ENI: $eni"
+              ATTACHMENT_ID=$(aws ec2 describe-network-interfaces --network-interface-ids $eni --query 'NetworkInterfaces[0].Attachment.AttachmentId' --output text)
+              if [ "$ATTACHMENT_ID" != "None" ]; then
+                echo "🔄 Force detaching ENI: $eni"
+                aws ec2 detach-network-interface --attachment-id $ATTACHMENT_ID --force
+                sleep 15  # Wait for detachment
+              fi
+              echo "🗑️ Deleting ENI: $eni"
+              aws ec2 delete-network-interface --network-interface-id $eni || true
             done
 
-            # Delete Security Groups (except default)
+            # Delete Security Group Rules First
             echo "🔍 Finding Security Groups..."
-            SG_IDS=$(aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$VPC_ID" "Name=group-name,Values=*vanillatstodo*" --query 'SecurityGroups[?GroupName!=`default`].GroupId' --output text)
+            SG_IDS=$(aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$VPC_ID" --query 'SecurityGroups[?GroupName!=`default`].GroupId' --output text)
             for sg in $SG_IDS; do
+              echo "🗑️ Removing inbound rules from SG: $sg"
+              aws ec2 revoke-security-group-ingress --group-id $sg --protocol all --source-group $sg --port -1 || true
+              echo "🗑️ Removing outbound rules from SG: $sg"
+              aws ec2 revoke-security-group-egress --group-id $sg --protocol all --port -1 --cidr 0.0.0.0/0 || true
               echo "🗑️ Deleting Security Group: $sg"
               aws ec2 delete-security-group --group-id $sg || true
             done
 
-            # Delete Route Tables
+            # Delete Route Tables (except main)
             echo "🔍 Finding Route Tables..."
             RT_IDS=$(aws ec2 describe-route-tables --filters "Name=vpc-id,Values=$VPC_ID" --query 'RouteTables[?Associations[0].Main!=`true`].RouteTableId' --output text)
             for rt in $RT_IDS; do
-              ASSOC_IDS=$(aws ec2 describe-route-tables --route-table-id $rt --query 'RouteTables[*].Associations[*].RouteTableAssociationId' --output text)
+              # Delete routes first
+              echo "🗑️ Deleting routes from RT: $rt"
+              ROUTES=$(aws ec2 describe-route-tables --route-table-id $rt --query 'RouteTables[0].Routes[?GatewayId!=`local`].DestinationCidrBlock' --output text)
+              for route in $ROUTES; do
+                aws ec2 delete-route --route-table-id $rt --destination-cidr-block $route || true
+              done
+              
+              # Then disassociate
+              ASSOC_IDS=$(aws ec2 describe-route-tables --route-table-id $rt --query 'RouteTables[0].Associations[*].RouteTableAssociationId' --output text)
               for assoc in $ASSOC_IDS; do
                 echo "🔄 Disassociating route table: $assoc"
-                aws ec2 disassociate-route-table --association-id $assoc
+                aws ec2 disassociate-route-table --association-id $assoc || true
               done
+              
               echo "🗑️ Deleting Route Table: $rt"
-              aws ec2 delete-route-table --route-table-id $rt
+              aws ec2 delete-route-table --route-table-id $rt || true
             done
 
-            # Delete Internet Gateway
-            IGW_ID=$(aws ec2 describe-internet-gateways --filters "Name=attachment.vpc-id,Values=$VPC_ID" --query 'InternetGateways[0].InternetGatewayId' --output text)
-            if [ "$IGW_ID" != "None" ]; then
-              echo "🗑️ Detaching and deleting Internet Gateway..."
-              aws ec2 detach-internet-gateway --internet-gateway-id $IGW_ID --vpc-id $VPC_ID
-              aws ec2 delete-internet-gateway --internet-gateway-id $IGW_ID
-            fi
-
             # Delete Subnets
+            echo "🔍 Finding Subnets..."
             SUBNET_IDS=$(aws ec2 describe-subnets --filters "Name=vpc-id,Values=$VPC_ID" --query 'Subnets[*].SubnetId' --output text)
             for subnet in $SUBNET_IDS; do
               echo "🗑️ Deleting subnet: $subnet"
-              aws ec2 delete-subnet --subnet-id $subnet
+              aws ec2 delete-subnet --subnet-id $subnet || true
             done
 
-            # Final attempt to delete VPC
-            echo "🗑️ Deleting VPC..."
+            # Final VPC deletion attempt
+            echo "🗑️ Attempting VPC deletion..."
+            sleep 30  # Wait for all deletions to complete
             aws ec2 delete-vpc --vpc-id $VPC_ID
           fi
